--- a/src/Header/styles.module.scss
+++ b/src/Header/styles.module.scss
@@ -1,5 +1,6 @@
 .headerContainer {
-  background: var(--white);
+  // background: var(--white);
+  background: #4953B8;
   height: 6.5rem;
 
   display: flex;
@@ -10,12 +11,17 @@
 
 
   p {
+    color: #FFFF;
     margin-left: 2rem;
     padding: 0.25rem 0 0.25rem 2rem;
     border-left: 1px solid var(--gray-100);
   }
 
+  h1{
+    color: #FFFF;
+  }
   span {
+    color: #FFFF;
     margin-left: auto;
   }
 }
