--- a/src/Components/Form/styles.module.scss
+++ b/src/Components/Form/styles.module.scss
@@ -6,7 +6,7 @@
     width: 45.25rem;
     height: 100vh;
   
-    background: #ffff;
+    background:#e6e8ebd2;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
