--- a/src/Components/Form/styles.module.scss
+++ b/src/Components/Form/styles.module.scss
@@ -1,17 +1,51 @@
 
-.formContainer {
+.formContainerClose {
     border-left: 2px solid #f1f1f1;
     padding: 3rem 4rem;
   
-    width: 45.25rem;
+    width: 100%;
     height: 100vh;
-  
-    background:#e6e8ebd2;
+    position: fixed;
+    right: 0;
+    cursor: initial;
+    transition: 1s;
+    z-index: initial;
+    background:#e6e8eb;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     overflow-y: auto;
-    
+    transform: translateX(100%);
+
+    h1{
+      margin-bottom: 0.5rem;
+    }
+
+    p{
+      margin-bottom: 3rem;
+    }
+
+    form{
+      width: 100%;
+    }
+  } 
+
+.formContainerOpen{
+    border-left: 2px solid #f1f1f1;
+    padding: 3rem 4rem;
+  
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    right: 0;
+    background:#e6e8eb;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    overflow-y: auto;
+    transition: 0.8s;
+    transform: translateX(0vw);
+
     h1{
       margin-bottom: 0.5rem;
     }
@@ -29,4 +63,12 @@
     width: 100%;
     display: flex;
     justify-content: flex-start;
+  }
+
+  .upload {
+    width: 100%;
+    background: #ffffff;
+    border-radius:4px;
+    padding: 20px;
+    margin-bottom: 20px;
   }
